# F1-Tire-Strategy

./: CMakeLists.txt  collect_data.py  main.cpp  predict.cpp
data-interpretor/: data-loader.cpp  data-loader.h
neural-network/: GPUfunctions.cpp  GPUfunctions.h  activation-functions.cpp  activation-functions.h  env.h  layers.cpp  layers.h  loss-functions.cpp  loss-functions.h  matrix.cpp  matrix.h  model.cpp  model.h  optimizers.cpp  optimizers.h  test-and-gate.h  visitor.cpp  visitor.h
